Fix: améliorer UX du portfolio
- Réduire durée du loader (2000ms → 800ms)
- Corriger affichage image projet (utiliser champ 'image')
- Fix menu burger (ajout toggle state)
- Améliorer espacement descriptions projets
- Ajouter margin-bottom swiper-wrapper
- Réduire padding-bottom footer slider
- Retirer padding-top mobile/tablette page détails
- Ajuster hauteur images carousel mobile (19.25rem)
- Migrer DB vers UTF8MB4 pour support emojis

--- a/scss/components/_projects-slider.scss
+++ b/scss/components/_projects-slider.scss
@@ -82,6 +82,10 @@
     padding: 0;
     margin-inline: -1.25rem;
   }
+
+  .swiper-wrapper {
+    margin-bottom: 20px;
+  }
 }
 
 .emotions-slider__slide {
@@ -295,6 +299,10 @@
   max-height: 3.75rem;
   overflow: hidden;
   transition: max-height 0.6s ease-in;
+}
+
+.emotions-slider-item__footer {
+  padding-bottom: 0.5rem;
 }
 
 .emotions-slider-item__header-inner {
