--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -374,8 +374,13 @@ nav {
   background: $primary-color;
   width: 0%;
   transition: width 0.1s ease;
-  z-index: 101;
+  z-index: 9999;
   box-shadow: 0 -0.125rem 0.625rem rgba($primary-color, 0.3);
+
+  @media (max-width: 768px) {
+    height: 0.25rem;
+    z-index: 9999;
+  }
 }
 
 // Dropdown mobile
