--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -180,8 +180,10 @@
         <a href="index.php#parcours" class="mobile-nav-link">Mon Parcours</a>
         <a href="index.php#testimonials" class="mobile-nav-link">Témoignages</a>
         <a href="index.php#contact" class="mobile-nav-link">Contact</a>
-        <!-- Download CV in mobile dropdown -->
-        <a href="assets/files/CV-Guven-Berancan-DevWebFullStack.pdf" download="CV-Guven-Berancan-DevWebFullStack.pdf" class="mobile-nav-link">Télécharger le CV</a>
+        <!-- Download CV in mobile dropdown - Stylisé différemment -->
+        <a href="assets/files/CV-Guven-Berancan-DevWebFullStack.pdf" download="CV-Guven-Berancan-DevWebFullStack.pdf" class="mobile-nav-link mobile-cv-btn">
+          <i class="fas fa-download"></i> Télécharger le CV
+        </a>
         <i class="fa-solid fa-xmark cancel" onclick="cancel()"></i>
       </div>
     </div>
