--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4359,6 +4359,13 @@ h2.section-visible::after {
   color: #222f4f;
   box-shadow: 0 0.25rem 0.9375rem rgba(173, 187, 220, 0.5), 0 0.125rem 0.5rem rgba(173, 187, 220, 0.3);
 }
+@media (max-width: 30rem) {
+  .status-badge {
+    padding: 0.75rem 1.5rem 0.75rem 1.25rem;
+    font-size: 1rem;
+    gap: 0.5rem;
+  }
+}
 
 @keyframes pulse {
   0%, 100% {
