--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -26,6 +26,7 @@ $primary-darker: #293961;
 $accent-color: #adbbdc;
 $danger-color: crimson;
 $white: white;
+$text-color: #333333;
 
 // Couleurs de l'animation 404
 $neon-color: #ff005d;
