Fix footer navigation links

--- a/src/Views/layout.phtml
+++ b/src/Views/layout.phtml
@@ -207,10 +207,10 @@
   <div class="wave"></div>
   <h3>Berancan Guven</h3>
   <div class="footer-links">
-    <a href="index.php#home">Accueil</a>
-    <a href="index.php#parcours">Mon Parcours</a>
-    <a href="index.php#testimonials">Témoignages</a>
-    <a href="index.php#contact">Contact</a>
+    <a href="/#home">Accueil</a>
+    <a href="/#parcours">Mon Parcours</a>
+    <a href="/#testimonials">Témoignages</a>
+    <a href="/#contact">Contact</a>
   </div>
   <div class="footer-social">
     <a href="https://github.com/BRCorg" target="_blank" aria-label="GitHub">
